chore: [CO-2007] Improve Test Infrastructure & Refactor Setup (#699)
- we collect also failsafe junit reports
- added "owasp_policy_file" in the localconfig, in order to make tests flexible.
- bumped to easymock 5.2.0 to make it compatible with jdk 17+
---------

Co-authored-by: Keshav Bhatt <keshavnrj@gmail.com>